# memory-hermes

./: LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
astral-memory/: __init__.py  plugin.yaml  schemas.py  tools.py
skills/: astral-memory.md
