# Generation Timestamp: 2026-04-10T04:00:00Z
[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "astral-memory-hermes"
version = "1.0.0"
description = "Offline-first persistent memory plugin for Hermes Agent. Surprise-gated learning, local embeddings, fleet sync. No API keys required."
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.8"
authors = [
    {name = "Suocommerce", email = "support@suocommerce.fi"},
]
keywords = [
    "hermes-agent", "memory", "ai-memory", "offline",
    "local-embeddings", "persistent-memory", "surprise-gating",
    "astral-core", "llm-memory",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "requests>=2.25.0",
]

[project.urls]
Homepage = "https://github.com/Suo-commerce/memory-hermes"
Documentation = "https://github.com/Suo-commerce/memory-hermes#readme"
Repository = "https://github.com/Suo-commerce/memory-hermes"
Issues = "https://github.com/Suo-commerce/memory-hermes/issues"
"Memory Server" = "https://orbitalfortress.com"
"OpenClaw Plugin" = "https://github.com/Suo-commerce/memory-openclaw"

[project.entry-points."hermes_agent.plugins"]
astral-memory = "astral_memory"

[tool.setuptools.packages.find]
include = ["astral_memory*"]

[tool.setuptools.package-data]
astral_memory = ["plugin.yaml"]
