# Generation Timestamp: 2026-05-21T10:20:00Z
#
# Astral Core Memory — Hermes Agent Memory Provider
#
# INSTALL NOTE:
#   pip install is NOT the primary install method. Hermes discovers
#   memory providers from plugins/memory/<name>/ inside the Hermes
#   repo (or $HERMES_HOME/plugins/<name>/ for user-installed).
#
#   Primary install:
#     cp -r astral-memory ~/Projects/hermes-agent/plugins/memory/astral_memory
#
#   The pip entry point below is for future Hermes versions that may
#   support pip-installed memory providers.

[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "astral-memory-hermes"
version = "2.1.0"
description = "Offline-first persistent memory provider for Hermes Agent. Surprise-gated learning, local embeddings, cross-encoder reranking, HyDE query expansion, session diary, fleet sync. No API keys required."
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "Suocommerce", email = "support@suocommerce.fi"},
]
keywords = [
    "hermes-agent", "memory", "memory-provider", "ai-memory", "offline",
    "local-embeddings", "persistent-memory", "surprise-gating",
    "astral-core", "llm-memory", "fleet-sync", "cross-encoder",
    "reranking",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "requests>=2.25.0",
]

[project.optional-dependencies]
# Install with: pip install astral-memory-hermes[reranker]
# Provides rerank_server.py — the MiniLM cross-encoder sidecar
reranker = [
    "sentence-transformers>=2.2.0",
    "flask>=2.3.0",
]

[project.urls]
Homepage = "https://github.com/Suo-commerce/memory-hermes"
Documentation = "https://github.com/Suo-commerce/memory-hermes#readme"
Repository = "https://github.com/Suo-commerce/memory-hermes"
Issues = "https://github.com/Suo-commerce/memory-hermes/issues"
"Memory Server" = "https://orbitalfortress.com"
"OpenClaw Plugin" = "https://github.com/Suo-commerce/memory-openclaw"

# pip entry point — aspirational, Hermes does not yet discover via pip
# When Hermes adds pip-based provider discovery, this will work automatically
[project.entry-points."hermes_agent.memory_providers"]
astral_memory = "astral_memory"

# rerank_server.py as a console script for convenience
[project.scripts]
astral-rerank-server = "rerank_server:main"

[tool.setuptools.packages.find]
include = ["astral_memory*"]

# Map on-disk directory (astral-memory/) to Python package (astral_memory)
[tool.setuptools.package-dir]
astral_memory = "astral-memory"

[tool.setuptools.package-data]
astral_memory = ["plugin.yaml"]

# Include rerank_server.py at the package root
[tool.setuptools.py-modules]
rerank_server = "rerank_server"
